Day 2/dynamic_ingress/deployment_b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-ingress-microservice-b
  labels:
    app: dynamic-ingress-microservice-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic-ingress-microservice-b
  template:
    metadata:
      labels:
        app: dynamic-ingress-microservice-b
    spec:
      containers:
      - name: dynamic-ingress-microservice-b
        image: axelsirota/dynamic-ingress-microservice-b:latest
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: dynamic-ingress-microservice-b
spec:
  selector:
    app: dynamic-ingress-microservice-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
