Day 2/dynamic_ingress/deployment_c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-ingress-microservice-c
  labels:
    app: dynamic-ingress-microservice-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic-ingress-microservice-c
  template:
    metadata:
      labels:
        app: dynamic-ingress-microservice-c
    spec:
      containers:
      - name: dynamic-ingress-microservice-c
        image: axelsirota/dynamic-ingress-microservice-c:latest
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: dynamic-ingress-microservice-c
spec:
  selector:
    app: dynamic-ingress-microservice-c
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP  # Internal Service
